--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,30 +2,27 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title><%=title%></title>
-	<link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
-	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"> -->
-	<meta name="keywords" content="<%=title%>" />
-	<meta name="description" content="<%=description%>" />
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link rel="stylesheet" type="text/css" href="css/page.css">
+	<title>沸点工作室-华中农业大学第一互联网技术团队</title>
+	<link rel="shortcut icon" href="/logo.ico" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/css/page.css">
 	<script type="text/javascript"></script>
 </head>
 <body>
 <div id="wrapper">
 	<!-- 引入头部文件 -->
-	<% include header %>	
+	<% include include/header %>	
 	<!-- 内容区域 -->
 	<div id="main">
 		<div id="contact">
 			<h1>联系我们</h1>
 			<div class="block-content">
-				<div><span><img src="images/address.png"></span><font>地址</font><p>中国·武汉·华中农业大学</p></div>
-				<div><span><img src="images/github.png"></span><font>Github</font><p>52FeidianStudio</p></div>
-				<div><span><img src="images/qq.png"></span><font>qq群</font><p>222807849</p></div>
-				<div><span><img src="images/wechat.png"></span><font>微信</font><p>FeidianStudio</p></div>
-				<div><span><img src="images/weibo.png"></span><font>微博</font><p>沸点工作室_hzau</p></div>
-				<div><span><img src="images/email.png"></span><font>Email</font><p>feidianstudio2010@163.com</p></div>
+				<div><span><img src="/images/address.png"></span><font>地址</font><p>中国·武汉·华中农业大学</p></div>
+				<div><span><img src="/images/github.png"></span><font>Github</font><p>52FeidianStudio</p></div>
+				<div><span><img src="/images/qq.png"></span><font>qq群</font><p>222807849</p></div>
+				<div><span><img src="/images/wechat.png"></span><font>微信</font><p>FeidianStudio</p></div>
+				<div><span><img src="/images/weibo.png"></span><font>微博</font><p>沸点工作室_hzau</p></div>
+				<div><span><img src="/images/email.png"></span><font>Email</font><p>feidianstudio2010@163.com</p></div>
 			</div>
 			<h2><font>Find Us</font></h2>
 			<div class="map" id="dituContent">
@@ -33,9 +30,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/baidumapapi.js"></script>
+	<script src="/js/baidumapapi.js"></script>
 	<!-- 引入尾部文件 -->
-	<% include footer %>
+	<% include include/footer %>
 </div>
 </body>
 </html>
