--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,41 +3,41 @@
 <head>
 	<meta charset="utf-8">
 	<title><%=title%></title>
-	<link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/logo.ico" type="image/x-icon" />
 	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"> -->
 	<meta name="keywords" content="<%=title%>" />
 	<meta name="description" content="<%=description%>" />
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/dark.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/base.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+	<link rel="stylesheet" type="text/css" href="/css/dark.css">
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
 <body>
 <div id="wrapper">
 	<!-- 引入头部文件 -->
-	<% include header %>	
+	<% include include/header %>	
 	<!-- 内容区域 -->
 	<div id="main">
 		<!-- 图片滚动区域 -->
 		<div id="focus">
 			<div class="focus-block">
-                <img src="images/focus1.jpg" class="focus-img">
+                <img src="/images/focus1.jpg" class="focus-img">
 			</div>
             <div class="focus-all-images">
-                <img src="images/focus1.jpg" class="focus-img">
-                <img src="images/focus2.jpg" class="focus-img">
-                <img src="images/focus3.jpg" class="focus-img">
-                <img src="images/focus4.jpg" class="focus-img">
-                <img src="images/focus5.jpg" class="focus-img">
-                <img src="images/focus6.jpg" class="focus-img">
-                <img src="images/focus7.jpg" class="focus-img">
-                <img src="images/focus8.jpg" class="focus-img">
-                <img src="images/focus9.jpg" class="focus-img">
-                <img src="images/focus10.jpg" class="focus-img">
+                <img src="/images/focus1.jpg" class="focus-img">
+                <img src="/images/focus2.jpg" class="focus-img">
+                <img src="/images/focus3.jpg" class="focus-img">
+                <img src="/images/focus4.jpg" class="focus-img">
+                <img src="/images/focus5.jpg" class="focus-img">
+                <img src="/images/focus6.jpg" class="focus-img">
+                <img src="/images/focus7.jpg" class="focus-img">
+                <img src="/images/focus8.jpg" class="focus-img">
+                <img src="/images/focus9.jpg" class="focus-img">
+                <img src="/images/focus10.jpg" class="focus-img">
             </div>
             <div class="focus-console">
-                <span class="left"><img src="images/left.png"></span>
-                <span class="right"><img src="images/right.png"></span>
+                <span class="left"><img src="/images/left.png"></span>
+                <span class="right"><img src="/images/right.png"></span>
             </div>
             <div class="focus-thumbnail">
                 <div class="focus-thumbnail-div">
@@ -82,11 +82,11 @@
         		<p class="title-description">OUR STUDY DIRECTION</p>
         	</div>
         	<div class="block-content">
-        		<div><span><img src="images/group1.png"></span><p>Web开发</p></div>
-        		<div><span><img src="images/group2.png"></span><p>Android/Java开发</p></div>
-        		<div><span><img src="images/group3.png"></span><p>iOS开发</p></div>
-        		<div><span><img src="images/group4.png"></span><p>信息安全</p></div>
-        		<div><span><img src="images/group5.png"></span><p>UI设计</p></div>
+        		<div><span><img src="/images/group1.png"></span><p>Web开发</p></div>
+        		<div><span><img src="/images/group2.png"></span><p>Android/Java开发</p></div>
+        		<div><span><img src="/images/group3.png"></span><p>iOS开发</p></div>
+        		<div><span><img src="/images/group4.png"></span><p>信息安全</p></div>
+        		<div><span><img src="/images/group5.png"></span><p>UI设计</p></div>
         	</div>
         </div>
         <!-- 新闻动态 -->
@@ -135,18 +135,18 @@
         		<p class="title-description">OUR FRIENDLY LINKS</p>
         	</div>
         	<div class="links-block">
-        		<img src="images/sale.png">
-        		<img src="images/sale.png">
-        		<img src="images/sale.png">
-        		<img src="images/sale.png">
-        		<img src="images/sale.png">
-        		<img src="images/sale.png">
+        		<img src="/images/sale.png">
+        		<img src="/images/sale.png">
+        		<img src="/images/sale.png">
+        		<img src="/images/sale.png">
+        		<img src="/images/sale.png">
+        		<img src="/images/sale.png">
         	</div>
         </div>
 	</div>
 	<!-- 引入尾部文件 -->
-	<% include footer %>
+	<% include include/footer %>
 </div>
-<script type="text/javascript" src="js/focus-img.js"></script>
+<script type="text/javascript" src="/js/focus-img.js"></script>
 </body>
 </html>
