--- a/views/members.ejs
+++ b/views/members.ejs
@@ -2,19 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title><%=title%></title>
-	<link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
-	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"> -->
-	<meta name="keywords" content="<%=title%>" />
-	<meta name="description" content="<%=description%>" />
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link rel="stylesheet" type="text/css" href="css/page.css">
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<title>沸点工作室-华中农业大学第一互联网技术团队</title>
+	<link rel="shortcut icon" href="/logo.ico" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/css/page.css">
+	<script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
 <body>
 <div id="wrapper">
 	<!-- 引入头部文件 -->
-	<% include header %>	
+	<% include include/header %>	
 	<!-- 内容区域 -->
 	<div id="main">
 		<div id="members">
@@ -49,9 +46,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/page.js"></script>
+	<script src="/js/page.js"></script>
 	<!-- 引入尾部文件 -->
-	<% include footer %>
+	<% include include/footer %>
 </div>
 </body>
 </html>
