--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -3,22 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<title><%=title%></title>
- 	<link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
+ 	<link rel="shortcut icon" href="/logo.ico" type="image/x-icon" />
 	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"> -->
 	<meta name="keywords" content="<%=title%>" />
 	<meta name="description" content="<%=description%>" />
-	<link rel="stylesheet" type="text/css" href="css/welcome.css">
+	<link rel="stylesheet" type="text/css" href="/css/welcome.css">
 	<script type="text/javascript"></script>
 </head>
 <body>
 	<audio controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
 	  	<!-- <source src="你要播放的音乐.ogg" type="audio/ogg" /> -->
-	  	<source src="media/bgm.mp3" type="audio/mpeg" />
+	  	<source src="/media/bgm.mp3" type="audio/mpeg" />
 	</audio>
 	<div id="wrapper">
 		<div id="title"></div>
 		<div id="declaration"></div>
-		<div id="enter"><a href="index"></a></div>
+		<div id="enter"><a href="/index"></a></div>
 	</div>
 </body>
 </html>
