--- a/views/recruit/signup.ejs
+++ b/views/recruit/signup.ejs
@@ -6,20 +6,26 @@
 	<link rel="shortcut icon" href="/logo.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="/css/base.css">
 	<link rel="stylesheet" type="text/css" href="/css/page.css">
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
 <body>
 <div id="wrapper">
 	<!-- 引入头部文件 -->
-	<% include include/header %>	
+	<% include ../include/header %>	
 	<!-- 内容区域 -->
 	<div id="main">
-		<div id="works">
-			
+		<div id="recruit">
+			<% include sidenav %>
+			<div class="right-content">
+				<div class="content-two content-section">
+					<h2>报名表</h2>
+				</div>
+			</div>
 		</div>
 	</div>
+	<script src="/js/page.js"></script>
 	<!-- 引入尾部文件 -->
-	<% include include/footer %>
+	<% include ../include/footer %>
 </div>
 </body>
 </html>
