--- a/views/culture/belief.ejs
+++ b/views/culture/belief.ejs
@@ -19,6 +19,7 @@
 			<div class="right-content">
 				<div class="content-three content-section">
 					<h2>团队精神</h2>
+					<div class="culture-article"><%=belief.content[0].value%></div>
 				</div>
 			</div>
 		</div>
