--- a/views/introduction/teacher.ejs
+++ b/views/introduction/teacher.ejs
@@ -22,30 +22,17 @@
 				<div class="content-two content-section">
 					<h2>导师团简介</h2>
 					<ul>
-						<li>
-							<img src="">
-							<span>
-								<h2>刘峰，副教授，博士</h2>
-								<h3>Tel：13349959699	 E-mail：liufeng@mail.hzau.edu.cn</h3>
-								<p> 200703-201006  华中科技大学 信息安全 工学博士 200409-200703  华中科技大学 计算机系统结构  工学硕士 200203-200406  华中科技大学 英语  文学学士（双学位） 200009-200406  华中农业大学 计算机科学与技术  理学学士  201007-至今  华中农业大学  教师   主持教育部高等学校博士学科点专项科研基金新教师类一项；主持校自主科技创新基金基础理科培育专题一项。  200703-201006  华中科技大学 信息安全 工学博士 200409-200703  华中科技大学 计算机系统结构  工学硕士 200203-200406  华中科技大学 英语  文学学士（双学位） 200009-200406  华中农业大学 计算机科学与技术  理学学士  201007-至今  华中农业大学  教师   主持教育部高等学校博士学科点专项科研基金新教师类一项；主持校自主科技创新基金基础理科培育专题一项。</p>
-							</span>
-						</li>
-						<li>
-							<img src="">
-							<span>
-								<h2>刘峰，副教授，博士</h2>
-								<h3>Tel：13349959699	 E-mail：liufeng@mail.hzau.edu.cn</h3>
-								<p> 200703-201006  华中科技大学 信息安全 工学博士 200409-200703  华中科技大学 计算机系统结构  工学硕士 200203-200406  华中科技大学 英语  文学学士（双学位） 200009-200406  华中农业大学 计算机科学与技术  理学学士  201007-至今  华中农业大学  教师   主持教育部高等学校博士学科点专项科研基金新教师类一项；主持校自主科技创新基金基础理科培育专题一项。 </p>
-							</span>
-						</li>
-						<li>
-							<img src="">
-							<span>
-								<h2>刘峰，副教授，博士</h2>
-								<h3>Tel：13349959699	 E-mail：liufeng@mail.hzau.edu.cn</h3>
-								<p> 200703-201006  华中科技大学 信息安全 工学博士 200409-200703  华中科技大学 计算机系统结构  工学硕士 200203-200406  华中科技大学 英语  文学学士（双学位） 200009-200406  华中农业大学 计算机科学与技术  理学学士  201007-至今  华中农业大学  教师   主持教育部高等学校博士学科点专项科研基金新教师类一项；主持校自主科技创新基金基础理科培育专题一项。 </p>
-							</span>
-						</li>
+						<% for(var i = 0;i < teachers.length;i++) { %>
+							<li>
+								<img src="/uploads/headimg/<%=teachers[i].img %>">
+								<span>
+									<h2><%=teachers[i].name %></h2>
+									<h3>Tel：<%=teachers[i].tel%>　　E-mail：<%=teachers[i].email%></h3>
+									<h3>简介：</h3><p><%=teachers[i].introduction%></p>
+									<h3>寄语：</h3><p><%=teachers[i].word%></p>
+								</span>
+							</li>
+						<% } %>
 					</ul>
 				</div>
 			</div>
