--- a/views/recruit/index.ejs
+++ b/views/recruit/index.ejs
@@ -19,6 +19,16 @@
 			<div class="right-content">
 				<div class="content-one content-section">
 					<h2>招新详情</h2>
+					<div class="recruit-content">
+						<span><font>招新简介</font><p><%=index[0].description%></p></span>
+						<span><font>招新对象</font><p><%=index[0].object%></p></span>
+						<span><font>招新时间</font><p><%=index[0].time%></p></span>
+						<span><font>招新日程</font><p><%=index[0].schedule%></p></span>
+						<span><font>注意事项</font><p><%=index[0].notice%></p></span>
+						<span><font>招新qq群</font><p><%=index[0].qq%></p></span>
+						<span><font>二维码</font><p><%=index[0].img%></p></span>
+						<span><font>联系方式</font><p><%=index[0].tel%></p></span>
+					</div>
 				</div>
 			</div>
 		</div>
