--- a/views/culture/index.ejs
+++ b/views/culture/index.ejs
@@ -19,6 +19,7 @@
 			<div class="right-content">
 				<div class="content-one content-section">
 					<h2>文化综述</h2>
+					<div class="culture-article"><%=index.content[0].value%></div>
 				</div>
 			</div>
 		</div>
