--- a/views/culture/photo.ejs
+++ b/views/culture/photo.ejs
@@ -19,6 +19,7 @@
 			<div class="right-content">
 				<div class="content-four content-section">
 					<h2>团队合照</h2>
+					<div class="culture-article"><%=photo[0].content[0].value%></div>
 				</div>
 			</div>
 		</div>
