--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -1,6 +1,6 @@
 <div id="header" name="header">
 	<div id="logo">
-    <a href="index"><img src="/images/header.png"></a>
+    <a href="/index"><img src="/images/header.png"></a>
   </div>
 	<div id="header-nav">
 		<ul>
